# spa-rs

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
examples/: solar_pos.rs  sunrise_and_set.rs
src/: lib.rs
