[package]
name = "spa"
version = "0.3.0"
authors = ["Frank Rehberger <frehberg@gmail.com>"]
description = "The Solar Position Algorithm module (SPA) for Rust calculates the sunrise-sunset and azimuth and zenith-angle for specific geo-position and time (UTC); for example for solar-panel-alignment or automotive."
license = "Apache-2.0"
edition = '2021'

documentation = "https://docs.rs/spa/"
homepage = "https://github.com/frehberg/spa-rs"
repository = "https://github.com/frehberg/spa-rs"

[dependencies]
chrono = {version="^0.4", default-features=false, features=["clock"]}
